[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["confident-confidant", "transcribe-long"]

[tool.uv.sources]
confident-confidant = { path = "./confident-confidant", editable = true }
transcribe-long = { path = "./transcribe-long", editable = true }

[project.scripts]
trans-coco = "transcribe_long_summarize:cli"

[tool.black]
line-length = 108

[tool.isort]
profile = "black"
line_length = 108

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.flake8]
extend-ignore = [
  "E501", # ignore line-too-long errors, Black handles this
  "E203", # whitespace before :
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
