[project]
name = "slacktools"
version = "0.1.0"
description = "Personal Slack tooling (Lists API, etc.)"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "argh>=0.30", "mcp>=1.0"]

[project.scripts]
slack = "slacktools.cli:main"
slack-mcp = "slacktools.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slacktools"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[dependency-groups]
dev = ["mypy>=1.20.2", "types-requests>=2.33.0.20260408"]
