[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "transcribe"
module-root = ""

[project]
name = "transcribe-long"
version = "0.1.0"
description = "Transcribe large audio files by splitting on silence, transcribing chunks, and stitching"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.81.0",
    "openai>=1.0.0",
    "thds-core>=1.50.20260117040119",
    "thds-humenc>=1.1.20260117040109",
    "thds-mops>=3.13.20260117040131",
]

[project.scripts]
transcribe = "transcribe.__main__:cli"
transcribe-diarize = "transcribe.diarize.__main__:cli"
transcribe-label = "transcribe.diarize.label:cli"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff]
line-length = 108

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
exclude = [
    '^venv/',
    '^tests/'
]
